--- a/ThirdWeek/TestChatTableViewCell.xib
+++ b/ThirdWeek/TestChatTableViewCell.xib
@@ -9,15 +9,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="171" id="KGk-i7-Jjw" customClass="TestChatTableViewCell" customModule="ThirdWeek" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="377" height="171"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="278" id="KGk-i7-Jjw" customClass="TestChatTableViewCell" customModule="ThirdWeek" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="602" height="278"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="377" height="171"/>
+                <rect key="frame" x="0.0" y="0.0" width="602" height="278"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ug1-7b-pHN">
-                        <rect key="frame" x="60" y="33" width="211" height="134"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chat_bubble_you_dark" translatesAutoresizingMaskIntoConstraints="NO" id="ug1-7b-pHN">
+                        <rect key="frame" x="59.999999999999972" y="33" width="431.33333333333326" height="241"/>
                     </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="n61-ec-rX1">
                         <rect key="frame" x="8" y="8" width="44" height="44"/>
@@ -27,7 +27,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4K0-qb-op7">
-                        <rect key="frame" x="60" y="8" width="277" height="21"/>
+                        <rect key="frame" x="60" y="8" width="502" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="wXc-zf-bPl"/>
                         </constraints>
@@ -36,7 +36,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="88:88 오전" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wSz-bK-EuL">
-                        <rect key="frame" x="275" y="147" width="60" height="16"/>
+                        <rect key="frame" x="495.33333333333326" y="254" width="60" height="16"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="16" id="1p5-qq-BIG"/>
                             <constraint firstAttribute="width" constant="60" id="Xmf-b0-wcG"/>
@@ -46,7 +46,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4IL-BU-Cju">
-                        <rect key="frame" x="64" y="37" width="203" height="126"/>
+                        <rect key="frame" x="63.999999999999972" y="37" width="423.33333333333326" height="233"/>
                         <string key="text">LabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabel</string>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
@@ -72,7 +72,10 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="78.625954198473281" y="63.028169014084511"/>
+            <point key="canvasLocation" x="-1386.2595419847328" y="100.70422535211269"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="chat_bubble_you_dark" width="116" height="79"/>
+    </resources>
 </document>
